[package]
name = "fire-http-representation"
description = "The HTTP types for fire-http"
version = "0.1.0"
authors = ["Sören Meier <info@s-me.ch>"]
homepage = "https://fire-lib.com/"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
