[package]
name = "fire-http-representation"
description = "Http types for the fire http crate"
version = "0.1.6"
authors = ["Sören Meier <info@s-me.ch>"]
homepage = "https://fire-lib.com/"
edition = "2018"
license = "MIT OR Apache-2.0"
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hyper_body = ["hyper"]
json = ["serde", "serde_json"]
timeout = ["tokio/time"]
encdec = ["percent-encoding"]

[dependencies]
tokio = { version = "1.0", features = ["io-util"] }
bytes = { version = "1.0" }
http = "0.2"
http-body = "0.4"
tokio-util = { version = "0.6", features = ["io"] }
pin-project-lite = "0.2"
hyper = { version = "0.14", optional = true }
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
percent-encoding = { version = "2.1", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["io-util", "macros", "rt-multi-thread"] }
hyper = { version = "0.14" }
serde = { version = "1.0", features = ["derive"] }